corrected error  message

--- a/src/main/resources/templates/mailTemplate.html
+++ b/src/main/resources/templates/mailTemplate.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Mail</title>
 </head>
 <body>
-<span th:text="${welcome}"></span>
+<span th:text="${message}"></span>
 </body>
 </html>
